tests/ui/lang-items/required-lang-item.stderr
error: requires `future_trait` lang_item
  --> $DIR/required-lang-item.rs:10:1
   |
LL | async fn x() {}
   | ^^^^^^^^^^^^

error: aborting due to 1 previous error

